submit midterm work

--- a/week 5/css/style.css
+++ b/week 5/css/style.css
@@ -55,7 +55,7 @@ a[href="https://Algonquincollege.com"]{
     color: green;
 }
 a:link{
-    color:cadetblue;
+    color:rgb(230, 16, 27);
 }
 a:visited{
     color:coral;
